# companion-agent

./: .gitignore  README.md  README.zh-CN.md  conftest.py  pyproject.toml
companion_agent/: __init__.py  __main__.py  bot.py  config.py  llm.py  proactive.py
companion_agent/agent/: __init__.py  engine.py  prompt.py
companion_agent/memory/: __init__.py  dream.py  session.py  user_profile.py
tests/: test_bot.py  test_config.py  test_engine.py  test_llm.py  test_memory.py  test_proactive.py  test_prompt.py
workspace/: SOUL.md.template
