[project]
name = "companion-agent"
version = "0.1.0"
description = "个人微信陪伴 AI — 基于 DeepSeek + weixin-bot-python"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39",
    "pyyaml>=6.0",
    "weixin-bot",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["companion_agent"]
